force-app/main/default/objects/Product_FX_Pricing__c/Product_FX_Pricing__c.object-meta.xml
<CustomObject>
    <description>This object is used in pricing products based on the FX rate set bay the CFO.</description>
    <label>Product FX Pricing</label>
    <nameField>
        <label>Product FX Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product FX Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>