force-app/main/default/objects/Product_FX_Pricing__c/fields/Date_Active__c.field-meta.xml
<CustomField>
    <fullName>Date_Active__c</fullName>
    <label>Date Active</label>
    <type>DateTime</type>
</CustomField>