force-app/main/default/objects/Product_FX_Pricing__c/fields/date_Deactive__c.field-meta.xml
<CustomField>
    <fullName>date_Deactive__c</fullName>
    <label>date Deactive</label>
    <type>DateTime</type>
</CustomField>