force-app/main/default/objects/Product_FX_Pricing__c/fields/Exchange_Rate_AUD__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_AUD__c</fullName>
    <formula>IF( TEXT(CurrencyIsoCode) == &apos;AUD&apos; , RBA_Exchange_Rate__r.exchange_rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spot Rate AUD</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>