force-app/main/default/objects/Product_FX_Pricing__c/fields/Exchange_Rate_NZD__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_NZD__c</fullName>
    <formula>if(TEXT( CurrencyIsoCode) == &apos;NZD&apos;,RBA_Exchange_Rate__r.Exchange_Rate_NZD__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spot Rate NZD</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>