force-app/main/default/objects/Product_FX_Pricing__c/fields/From_Currency__c.field-meta.xml
<CustomField>
    <fullName>From_Currency__c</fullName>
    <label>From Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>