force-app/main/default/objects/Product_FX_Pricing__c/fields/Hedged_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hedged_Rate__c</fullName>
    <inlineHelpText>This is the rate that TAD is using to create products.</inlineHelpText>
    <label>Costed Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>