force-app/main/default/objects/Product_FX_Pricing__c/fields/RBA_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>RBA_Exchange_Rate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>RBA Exchange Rate</label>
    <referenceTo>RBA_Exchange_Rate__c</referenceTo>
    <relationshipLabel>Product FX Pricing</relationshipLabel>
    <relationshipName>Product_FX_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>