force-app/main/default/objects/Product_FX_Pricing__c/fields/RBA_Exchange_Rate_NZD__c.field-meta.xml
<CustomField>
    <fullName>RBA_Exchange_Rate_NZD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RBA Exchange Rate NZD</label>
    <referenceTo>RBA_Exchange_Rate__c</referenceTo>
    <relationshipLabel>Product FX Pricing (RBA Exchange Rate NZD)</relationshipLabel>
    <relationshipName>Product_FX_Pricing1</relationshipName>
    <type>Lookup</type>
</CustomField>