force-app/main/default/objects/Product_FX_Pricing__c/fields/To_Currency__c.field-meta.xml
<CustomField>
    <fullName>To_Currency__c</fullName>
    <label>To Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>