force-app/main/default/objects/Product_FX_Pricing__c/validationRules/If_already_used_Cannot_be_reavtivated.validationRule-meta.xml
<ValidationRule>
    <fullName>If_already_used_Cannot_be_reavtivated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS( Name , &apos;Offline&apos;), Active__c )</errorConditionFormula>
    <errorMessage>Record Cannot be recycled. Please create new record.</errorMessage>
</ValidationRule>