force-app/main/default/objects/Product_FX_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Currency__c</columns>
    <columns>Hedged_Rate__c</columns>
    <columns>RBA_Exchange_Rate__c</columns>
    <columns>Exchange_Rate_AUD__c</columns>
    <columns>Exchange_Rate_NZD__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>